src/test/compile-fail/for-each-over-bs.rs
// error-pattern:sequence in for each loop not a call
fn main() { for each p in 1 { } }
